--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </a>
       </h1>
       <nav>
-        <li><a href="contact.html">Conatct</a></li>
-        <li><a href="contact.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
       </nav>
     </header>
     <section>
@@ -129,8 +129,8 @@
       <h4>
         Enter your email and register to a free newsletter
       </h4>
-      <form action="">
-        <input type="text" placeholder="email">
+      <form action="" method="POST">
+        <input type="email" placeholder="email@example.com" name="newsletterEmail">
       </form>
     </footer>
   </body>
