--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <h2 class="section-title">Get in touch</h2>
 
       <div class="contact-form">
-        <form action="" method="POST">
+        <form action="contact.html" method="GET">
             <div class="input-container">
                 <div class="input-wrapper">
                     <label for="name">Your name</label>
@@ -42,8 +42,10 @@
             </div>        
             <div class="input-wrapper content">
                 <label for="message">Message</label>
-                <!-- <input type="textarea" name="message" placeholder="Message" required> -->
                 <textarea name="message" id="textarea" cols="30" rows="10"></textarea>
+            </div>
+            <div class="content-center">
+                <button class="button-primary big" type="submit">Send</button>
             </div>
         </form>
       </div>
@@ -55,8 +57,11 @@
         <h4>
           Enter your email and register to a free newsletter
         </h4>
-        <form action="" method="POST">
-          <input type="email" placeholder="email@example.com" name="newsletterEmail">
+        <form action="contact.html" method="GET">
+            <div class="flex-wrapper">
+                <input type="email" placeholder="email@example.com" name="newsletterEmail">
+                <button class="button-primary" type="submit">Submit</button>
+            </div>
         </form>
     </footer>
 </body>
