Added author info in footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="more-actions">
-          <a href="#">Load more</a>
+          <a class="button-link" href="#">Load more</a>
         </div>
       </div>
     </section>
@@ -148,6 +148,12 @@
           <button class="button-primary" type="submit">Submit</button>
         </div>
       </form>
+      <div class="footer-info">
+        <h4>
+          Created proudly by <span>Szymon Nieścior</span>
+        </h4>
+        <a class="button-link" href="https://github.com/sniescior" target="_blank">GITHUB</a>
+      </div>
     </footer>
   </body>
 </html>
