--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,12 @@
                 <button class="button-primary" type="submit">Submit</button>
             </div>
         </form>
+        <div class="footer-info">
+            <h4>
+              Created proudly by <span>Szymon Nieścior</span>
+            </h4>
+            <a class="button-link" href="https://github.com/sniescior" target="_blank">GITHUB</a>
+          </div>
     </footer>
 </body>
 </html>
