About page init and not necessary comments erased + changed email field in newsletter form to required

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         </h4>
         <form action="contact.html" method="GET">
             <div class="flex-wrapper">
-                <input type="email" placeholder="email@example.com" name="newsletterEmail">
+                <input type="email" placeholder="email@example.com" name="newsletterEmail" required>
                 <button class="button-primary" type="submit">Submit</button>
             </div>
         </form>
