--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello world project</title>
+    <title>Blog - index</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-
-    <!-- <div class="lds-ring"><div></div><div></div><div></div><div></div></div> -->
-
     <header>
       <h1 class="logo">
         <a href="index.html">
@@ -144,7 +141,7 @@
       </h4>
       <form action="index.html" method="GET">
         <div class="flex-wrapper">
-          <input type="email" placeholder="email@example.com" name="newsletterEmail">
+          <input type="email" placeholder="email@example.com" name="newsletterEmail" required>
           <button class="button-primary" type="submit">Submit</button>
         </div>
       </form>
