Implemented about page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="logo">
+          <a href="index.html">
+            Blog
+          </a>
+        </h1>
+        <nav>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+        </nav>
+      </header>
+      <section>
+        <div class="about-wrapper">
+            <h2 class="title small">
+                About
+            </h2>
+            <h1 class="title main">
+                This is where we tell stories.<br>
+            </h1>
+
+            <span class="divider"></span>
+
+            <p class="about-paragraph">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse, veritatis provident explicabo quasi dolor atque omnis dolorum in, adipisci tenetur earum totam dicta impedit odio vitae ullam harum quibusdam obcaecati sequi reiciendis! Laudantium, earum. Dolorem libero nostrum cupiditate modi magnam neque sunt reprehenderit nulla ipsum repudiandae culpa quibusdam nesciunt, aspernatur natus consequuntur quam ad id? Esse iure beatae exercitationem vero quibusdam quisquam ipsam sequi maiores facere! Autem itaque ea hic doloribus cupiditate consequuntur debitis, officiis praesentium ut exercitationem eveniet neque dolorem temporibus id nesciunt facere repellat dolorum harum impedit? Voluptatem, vel dicta? Odio, hic dolorem eveniet fugiat id velit iure.
+            </p>
+
+            <div class="button-wrapper">
+                <button class="button-primary rectangle">Start now</button>
+                <a href="index.html" class="button-link">Or read more...</a>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
